# bigdata-hw2

./: Readme.md
.github/workflows/: build.yaml
analytics/: .env  local-dev.sh  main.py  pyproject.toml
analytics/analytics/: __init__.py  most_average_likes.py
analytics/services/: mongo.py
ingestor/: .env  .gitignore  Dockerfile  local-dev.sh  pyproject.toml
ingestor/src/: main.py
ingestor/src/api/: api.py
ingestor/src/dataset/: __init__.py  ingest_dataset.py
ingestor/src/services/: mongo.py
k8s/1_namespace/: namespace.yaml
k8s/2_mongodb/: 1_secrets.yaml  2_mongodb.statefullset.yaml  3_mongodb.service.yaml  4_mongodb-nodeport.service.yaml
k8s/3_2_scraper/: 0_scraper.secret.yaml  1_scraper.deployment.yaml  2_scraper.service.yaml
k8s/3_ingestor/: 1_ingestor.deployment.yaml  2_ingestor.service.yaml
k8s/4_analytics/: 1_analytics.deployment.yaml  2_analytics.service.yaml  3_analytics.service.yaml
k8s/5_ui/: 1_ui.deployment.yaml  2_ui.service.yaml
k8s/6_ingress/: 1_ingress.controller.yaml
k8s/mongodb/: mongodb-test.service.yaml  mongodb.service.yaml  mongodb.statefullset.yaml  secrets.yaml
twit-scraper/: .env  Dockerfile  local-dev.sh  main.mjs  package-lock.json  package.json
ui/: Dockerfile  jsconfig.json  local-dev.sh  pyproject.toml
ui/static/: analytics-api.js  index.html  index.js  ingestor-api.js  scraper-api.js  script.js  style.css  view-model.js
